--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -2840,7 +2840,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 69%|██████▉   | 69/100 [10:50:12<7:47:48, 905.44s/it, best loss: 0.16131053938141415] "
+      " 70%|███████   | 70/100 [11:02:58<7:11:45, 863.53s/it, best loss: 0.16131053938141415] "
      ]
     }
    ],
