--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -2906,7 +2906,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  3%|▎         | 3/100 [05:06<3:10:00, 117.53s/it, best loss: 0.05954337899543383]"
+      "  7%|▋         | 7/100 [12:42<2:18:17, 89.22s/it, best loss: 0.053059360730593697] "
      ]
     }
    ],
