--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -2906,7 +2906,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  7%|▋         | 7/100 [12:42<2:18:17, 89.22s/it, best loss: 0.053059360730593697] "
+      " 27%|██▋       | 27/100 [44:36<1:03:54, 52.53s/it, best loss: 0.053059360730593697] "
      ]
     }
    ],
