--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -2906,7 +2906,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 27%|██▋       | 27/100 [44:36<1:03:54, 52.53s/it, best loss: 0.053059360730593697] "
+      " 29%|██▉       | 29/100 [52:50<2:58:58, 151.24s/it, best loss: 0.051872146118721374]"
      ]
     }
    ],
