--- a/Code/main.ipynb
+++ b/Code/main.ipynb
@@ -1880,11 +1880,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 457,
+   "execution_count": 480,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:49:51.968495Z",
-     "start_time": "2019-06-13T03:49:51.885154Z"
+     "end_time": "2019-06-13T08:55:13.873620Z",
+     "start_time": "2019-06-13T08:55:13.780246Z"
     }
    },
    "outputs": [],
@@ -1894,11 +1894,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 458,
+   "execution_count": 481,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:49:55.834980Z",
-     "start_time": "2019-06-13T03:49:52.283786Z"
+     "end_time": "2019-06-13T08:55:18.054922Z",
+     "start_time": "2019-06-13T08:55:14.464142Z"
     }
    },
    "outputs": [],
@@ -1909,11 +1909,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 459,
+   "execution_count": 482,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:49:56.147483Z",
-     "start_time": "2019-06-13T03:49:56.135268Z"
+     "end_time": "2019-06-13T08:55:18.384910Z",
+     "start_time": "2019-06-13T08:55:18.371822Z"
     }
    },
    "outputs": [],
@@ -1924,11 +1924,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 483,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:50:59.521420Z",
-     "start_time": "2019-06-13T03:49:56.456704Z"
+     "end_time": "2019-06-13T08:56:22.941223Z",
+     "start_time": "2019-06-13T08:55:18.752653Z"
     }
    },
    "outputs": [],
@@ -1940,11 +1940,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 484,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:51:00.652698Z",
-     "start_time": "2019-06-13T03:50:59.834844Z"
+     "end_time": "2019-06-13T08:56:24.060717Z",
+     "start_time": "2019-06-13T08:56:23.247600Z"
     }
    },
    "outputs": [],
@@ -1955,11 +1955,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 485,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:51:00.968773Z",
-     "start_time": "2019-06-13T03:51:00.956341Z"
+     "end_time": "2019-06-13T08:56:24.374387Z",
+     "start_time": "2019-06-13T08:56:24.361980Z"
     }
    },
    "outputs": [],
@@ -1977,11 +1977,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 486,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:51:01.289594Z",
-     "start_time": "2019-06-13T03:51:01.272157Z"
+     "end_time": "2019-06-13T08:56:24.691569Z",
+     "start_time": "2019-06-13T08:56:24.672556Z"
     }
    },
    "outputs": [],
@@ -1992,11 +1992,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 487,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:51:01.610267Z",
-     "start_time": "2019-06-13T03:51:01.591464Z"
+     "end_time": "2019-06-13T08:56:25.007428Z",
+     "start_time": "2019-06-13T08:56:24.988881Z"
     }
    },
    "outputs": [],
@@ -2007,11 +2007,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 488,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:51:04.317081Z",
-     "start_time": "2019-06-13T03:51:01.907634Z"
+     "end_time": "2019-06-13T08:56:27.780057Z",
+     "start_time": "2019-06-13T08:56:25.305054Z"
     }
    },
    "outputs": [],
@@ -2022,11 +2022,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 489,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:13.774618Z",
-     "start_time": "2019-06-13T03:51:04.611291Z"
+     "end_time": "2019-06-13T08:59:27.441160Z",
+     "start_time": "2019-06-13T08:56:28.082559Z"
     }
    },
    "outputs": [],
@@ -2049,11 +2049,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 490,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:14.123874Z",
-     "start_time": "2019-06-13T03:54:14.102209Z"
+     "end_time": "2019-06-13T08:59:27.748951Z",
+     "start_time": "2019-06-13T08:59:27.732948Z"
     }
    },
    "outputs": [],
@@ -2064,11 +2064,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 491,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:14.465797Z",
-     "start_time": "2019-06-13T03:54:14.449325Z"
+     "end_time": "2019-06-13T08:59:28.054117Z",
+     "start_time": "2019-06-13T08:59:28.038427Z"
     }
    },
    "outputs": [],
@@ -2079,11 +2079,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 492,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:15.891293Z",
-     "start_time": "2019-06-13T03:54:14.804108Z"
+     "end_time": "2019-06-13T08:59:29.349460Z",
+     "start_time": "2019-06-13T08:59:28.343091Z"
     }
    },
    "outputs": [],
@@ -2094,11 +2094,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 493,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:49.221809Z",
-     "start_time": "2019-06-13T03:54:16.209125Z"
+     "end_time": "2019-06-13T09:00:31.143105Z",
+     "start_time": "2019-06-13T08:59:29.628433Z"
     }
    },
    "outputs": [],
@@ -2126,11 +2126,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 494,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:49.542550Z",
-     "start_time": "2019-06-13T03:54:49.530192Z"
+     "end_time": "2019-06-13T09:00:31.461329Z",
+     "start_time": "2019-06-13T09:00:31.448640Z"
     }
    },
    "outputs": [],
@@ -2141,11 +2141,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 495,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:49.907040Z",
-     "start_time": "2019-06-13T03:54:49.894052Z"
+     "end_time": "2019-06-13T09:00:31.821684Z",
+     "start_time": "2019-06-13T09:00:31.807467Z"
     }
    },
    "outputs": [],
@@ -2156,11 +2156,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 496,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:50.232402Z",
-     "start_time": "2019-06-13T03:54:50.215408Z"
+     "end_time": "2019-06-13T09:00:32.151339Z",
+     "start_time": "2019-06-13T09:00:32.136075Z"
     }
    },
    "outputs": [
@@ -2168,8 +2168,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training Error: 0.008\n",
-      "Testing Error: 0.137\n"
+      "Training Error: 0.002\n",
+      "Testing Error: 0.136\n"
      ]
     }
    ],
@@ -2180,11 +2180,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 497,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:50.624778Z",
-     "start_time": "2019-06-13T03:54:50.555236Z"
+     "end_time": "2019-06-13T09:00:32.540465Z",
+     "start_time": "2019-06-13T09:00:32.459264Z"
     }
    },
    "outputs": [
@@ -2239,11 +2239,11 @@
        "    <tr>\n",
        "      <th>Chardonnay</th>\n",
        "      <td>0</td>\n",
-       "      <td>7573</td>\n",
+       "      <td>7606</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>35</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cabernet Sauvignon</th>\n",
@@ -2275,11 +2275,11 @@
        "    <tr>\n",
        "      <th>Riesling</th>\n",
        "      <td>0</td>\n",
-       "      <td>206</td>\n",
+       "      <td>32</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "      <td>0</td>\n",
-       "      <td>3135</td>\n",
+       "      <td>3309</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2289,23 +2289,23 @@
        "                          Pinot Noir  Chardonnay  Cabernet Sauvignon  \\\n",
        "Real                                                                   \n",
        "Pinot Noir                      8592           0                   2   \n",
-       "Chardonnay                         0        7573                   0   \n",
+       "Chardonnay                         0        7606                   0   \n",
        "Cabernet Sauvignon                 9           0                6178   \n",
        "Red Blend                          8           0                   7   \n",
        "Bordeaux-style Red Blend           0           0                   1   \n",
-       "Riesling                           0         206                   0   \n",
+       "Riesling                           0          32                   0   \n",
        "\n",
        "                          Red Blend  Bordeaux-style Red Blend  Riesling  \n",
        "Real                                                                     \n",
        "Pinot Noir                        0                         1         0  \n",
-       "Chardonnay                        0                         0        35  \n",
+       "Chardonnay                        0                         0         2  \n",
        "Cabernet Sauvignon                1                         0         0  \n",
        "Red Blend                      5754                         1         0  \n",
        "Bordeaux-style Red Blend          0                      4529         0  \n",
-       "Riesling                          0                         0      3135  "
+       "Riesling                          0                         0      3309  "
       ]
      },
-     "execution_count": 474,
+     "execution_count": 497,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2316,12 +2316,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 498,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-06-13T03:54:50.993164Z",
-     "start_time": "2019-06-13T03:54:50.939309Z"
-    }
+     "end_time": "2019-06-13T09:00:32.910956Z",
+     "start_time": "2019-06-13T09:00:32.858332Z"
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -2366,20 +2367,20 @@
        "    <tr>\n",
        "      <th>Pinot Noir</th>\n",
        "      <td>3276</td>\n",
-       "      <td>48</td>\n",
+       "      <td>47</td>\n",
        "      <td>163</td>\n",
        "      <td>44</td>\n",
        "      <td>144</td>\n",
-       "      <td>8</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Chardonnay</th>\n",
        "      <td>30</td>\n",
-       "      <td>3150</td>\n",
+       "      <td>3143</td>\n",
        "      <td>11</td>\n",
        "      <td>1</td>\n",
        "      <td>19</td>\n",
-       "      <td>49</td>\n",
+       "      <td>56</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Cabernet Sauvignon</th>\n",
@@ -2402,20 +2403,20 @@
        "    <tr>\n",
        "      <th>Bordeaux-style Red Blend</th>\n",
        "      <td>94</td>\n",
-       "      <td>17</td>\n",
+       "      <td>16</td>\n",
        "      <td>119</td>\n",
        "      <td>94</td>\n",
        "      <td>1617</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Riesling</th>\n",
        "      <td>20</td>\n",
-       "      <td>200</td>\n",
+       "      <td>184</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>1210</td>\n",
+       "      <td>1226</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2424,30 +2425,44 @@
       "text/plain": [
        "                          Pinot Noir  Chardonnay  Cabernet Sauvignon  \\\n",
        "Real                                                                   \n",
-       "Pinot Noir                      3276          48                 163   \n",
-       "Chardonnay                        30        3150                  11   \n",
+       "Pinot Noir                      3276          47                 163   \n",
+       "Chardonnay                        30        3143                  11   \n",
        "Cabernet Sauvignon               241           4                2179   \n",
        "Red Blend                        148           7                 276   \n",
-       "Bordeaux-style Red Blend          94          17                 119   \n",
-       "Riesling                          20         200                   1   \n",
+       "Bordeaux-style Red Blend          94          16                 119   \n",
+       "Riesling                          20         184                   1   \n",
        "\n",
        "                          Red Blend  Bordeaux-style Red Blend  Riesling  \n",
        "Real                                                                     \n",
-       "Pinot Noir                       44                       144         8  \n",
-       "Chardonnay                        1                        19        49  \n",
+       "Pinot Noir                       44                       144         9  \n",
+       "Chardonnay                        1                        19        56  \n",
        "Cabernet Sauvignon              158                        70         0  \n",
        "Red Blend                      1896                       145         1  \n",
-       "Bordeaux-style Red Blend         94                      1617         0  \n",
-       "Riesling                          1                         0      1210  "
+       "Bordeaux-style Red Blend         94                      1617         1  \n",
+       "Riesling                          1                         0      1226  "
       ]
      },
-     "execution_count": 475,
+     "execution_count": 498,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "con_matrix(train, y_test, pred_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-06-13T09:08:25.887603Z",
+     "start_time": "2019-06-13T09:08:25.879956Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import lightgbm as lgb"
    ]
   },
   {
@@ -2895,10 +2910,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 478,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-13T03:57:26.331Z"
+     "end_time": "2019-06-13T08:24:47.420643Z",
+     "start_time": "2019-06-13T03:57:26.336004Z"
     }
    },
    "outputs": [
@@ -2906,7 +2922,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 30%|███       | 30/100 [56:45<3:25:38, 176.27s/it, best loss: 0.051872146118721374]"
+      "100%|██████████| 100/100 [4:27:21<00:00, 211.75s/it, best loss: 0.05114155251141561]  \n"
      ]
     }
    ],
@@ -2917,13 +2933,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 479,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2019-06-13T03:57:29.242Z"
+     "end_time": "2019-06-13T08:24:47.744109Z",
+     "start_time": "2019-06-13T08:24:47.732326Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'colsample_bylevel': 0.55, 'gamma': 1.9408343047198157e-10, 'learning_rate': 0.044, 'max_depth': 6.0, 'min_child_weight': 6.7187781835269e-05, 'n_estimators': 980.0, 'reg_alpha': 0.0002785605211704077, 'reg_lambda': 0.012392713378335987, 'subsample': 1.0}\n"
+     ]
+    }
+   ],
    "source": [
     "print(best_white)"
    ]
